@@ -67,8 +67,9 @@
                 <version>3.13.0</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <source>${project.build.java.version}</source>
-                    <target>${project.build.java.version}</target>
+                    <source>21</source>
+                    <target>21</target>
+                  <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <!-- used to execute the unit tests of an application and generate a report -->
